# payments-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.sh  main.py  manage.py  nginx.conf  pyproject.toml  run.sh  run_local.sh
payment/: celery.py  settings.py  urls.py
payments/: admin.py  loaders.py  middleware.py  models.py  tasks.py  unfold_admin.py
payments/migrations/: 0001_initial.py
