[project]
name = "payments-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.1",
    "django>=5.2",
    "django-celery-beat>=2.8.0",
    "django-unfold>=0.55.3",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.6",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "django-types>=0.20.0",
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[tool.mypy]
exclude = ".*/payments/models/.*"
disable_error_code = ["call-overload", "import-untyped"]